--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <div  data-role="main" class="ui-content">
   <p> ESTA APLICACION ESTA HECHA CON EL MOTIVO DE HACER UNA PAGIAN WEB DE ESTA BANDA DE NU METAL</p>
    <a href="#mypanel"  id="btnmenu" class="ui-btn" >menu</a> 
-   
+    
    <div align="left">
-      <img src="INFORMACION/imagenes/korn 2.jpg">
+      <img src="INFORMACION/imagenes/korn 2.jpg" style="width:60%">
    </div>
    
    
