--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <p> ESTA APLICACION ESTA HECHA CON EL MOTIVO DE HACER UNA PAGIAN WEB DE ESTA BANDA DE NU METAL</p>
    <a href="#mypanel"  id="btnmenu" class="ui-btn" >menu</a> 
     
-   <div align="left">
-      <img src="INFORMACION/imagenes/korn 2.jpg" style="width:60%">
+   <div align="center">
+      <img src="INFORMACION/imagenes/korn 2.jpg" style="width:70%">
    </div>
    
    
@@ -42,7 +42,7 @@
   
   <div data-role="panel" id="mypanel" data-display="overlay">
   <a href="#biografia"  id="btnbiografia" class="ui-btn" >Historia </a> 
-   <a href="#albunes"  id="btnalbunes" class="ui-btn" >Albunes</a> 
+   <a href="#albunes"  id="btnalbunes" class="ui-btn" >Albumes</a> 
     <a href="#fotos"  id="btnfotos" class="ui-btn" >Fotos</a> 
     <a href="#discografia"  id="btndisco" class="ui-btn" >Discografia</a> 
     <a href="#integrantes"  id="btnintegrantes" class="ui-btn" >Integrantes</a> 
@@ -74,6 +74,8 @@
 
 <p>Esperaron pacientemente a que el grupo finalizara su actuación y hablaron con Jonathan, ex compañero de instituto de ambos. Después de charlar un rato le ofrecieron el papel de cantante en un grupo de heavy metal que estaban creando en Huntington Beach. Inicialmente, Jonathan rechazó la propuesta, pero hubo algo que le hizo cambiar de opinión. Días más tarde visitó a una tía suya, dedicada a la astrología. Esta le convenció para que aceptara la oferta. La profecía familiar se convirtió en una obsesión para Jonathan, que no paraba de dar vueltas al asunto. Así que fue a ver a los chicos e hizo una prueba.</p>
 
+
+
 <p>El grupo, ya como Korn, consiguió los servicios de un mánager que les asesorara en el mundo de la industria musical, pese a que los jóvenes miembros ya tenían algo de experiencia. Comenzaron a presentar y grabar maquetas y dar algunos conciertos a nivel local, presentando una música innovadora, agresiva, dura y mezclando sonidos como el rap y el metal a la vez que utilizaban guitarras de 7 cuerdas, que pronto llamó la atención del público, industria e imitadores. Aquel original sonido era una evolución natural de bandas como Rage Against the Machine o Red Hot Chili Peppers, bandas que mezclaban algo de heavy metal con rap. En 1988 nacieron como banda los californianos Deftones, y un año más tarde de la creación de Korn otro grupo saltó al panorama musical de este nuevo sonido metal, Limp Bizkit, quienes abanderarían, junto con Deftones y los propios Korn, por supuesto, el nu metal, que se gestó a comienzos de los años 1990.</p>
 
 <p>Tras dos años de giras ficharon con Immortal (subdivisión perteneciente a Epic Records) para grabar su primer álbum de estudio. La banda comenzó la grabación en los estudios Indigo Ranch, de Malibu Hills, California, para grabar su álbum debut, Korn, lanzado en octubre de 1994. Shaffer y Welch tocaban guitarras de 7 cuerdas, y Davis cantaba experiencias de su oscura y problemática adolescencia. La banda debutó también con buen pie, al igual que su disco debut (se han vendido más de un millón de copias) tocando en el Ozzfest, y que incluía conciertos junto a grupos como Ozzy Osbourne, Megadeth y Marilyn Manson.</p>
@@ -90,7 +92,7 @@
 </div>
 
 <div align="center">
-<img src="INFORMACION/imagenes/korn 11.jpg">
+<img src="INFORMACION/imagenes/korn 11.jpg" style="width:40%">
 </div>
   
   
@@ -188,7 +190,7 @@ El 11 de Abril del 2012, The Path of Totality ganó el "álbum del año" los pre
 </div>
 
 <div align="center">
-<img src="INFORMACION/imagenes/korn 5.jpg">
+<img src="INFORMACION/imagenes/korn 5.jpg" style="width:50%">
 </div>
  
     <a href="#principal"  id="btnvolver" class="ui-btn" >Volver</a>   
@@ -588,7 +590,7 @@ En 2000 el artista Hans Ruedi Giger crea una obra a pedido de Jonathan Davis, un
 <p>Fieldy usa un bajo Ibanez k5 de 5 cuerdas de diferentes colores usados a lo largo de su historia con KoRn. Fieldy a los 13/14 años ya era casi un alcohólico, robaba alcohol de tiendas o le sacaba a sus padres y la escondía en terrenos baldios para luego tomarlas antes de ir al escuela. Tiene tatuado todo el cuerpo desde el cuello hasta los talones, y comenzó a tatuarse en 1993 a comienzos de la banda. Todos los integrantes de KoRn tienen tatuados en parte de su cuerpo el nombre de la banda. </p>
 
 <div align="center">
-<img src="INFORMACION/integrantes/Reginald Arvizu.jpg">
+<img src="INFORMACION/integrantes/Reginald Arvizu.jpg" style="width:40%">
 
 </div>
 
@@ -640,7 +642,7 @@ Su compañero en Ko?n, Brian "Head" Welch, fue quien le enseñó a tocar la guit
 Es uno de los pocos guitarristas que usan una guitarra de 7 cuerdas al igual que Brian Welch. </p>
 
 <div align="center">
-<img src="INFORMACION/integrantes/James Shaffer.jpg">
+<img src="INFORMACION/integrantes/James Shaffer.jpg" style="width:40%">
 
 </div>
 
@@ -678,7 +680,7 @@ Durante las giras de Head, hubo confusiones con respecto al nombre de la banda, 
 En la edición Carolina Rebellion Festival del 2012, Head impresiono al público tocando "Blind", durante el concierto de Korn. Se anunció que Head tocaría con la banda en Rock on the Range en mayo de 2013, Rock Am Ring y Rock Im Park, en Junio de 2013. Oficialmente Head volvió a la banda el 2 de Mayo de 2013, y comenzó a grabar su primer album de estudio después de diez años fuera de la banda aunque apenas el 18 de Junio en su gira con Korn en Rusia fue hospitalizado por un caso fuerte de calculos en su riñón ,por lo que actualmente dejo por el momento la banda para ser atendido en el mismo país </p>
 
 <div align="center">
-<img src="INFORMACION/integrantes/Brian Welch.jpg">
+<img src="INFORMACION/integrantes/Brian Welch.jpg" style="width:35%">
 
 </div>
   
