--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
  <!-- albunes  -->
  <div data-role="page" id="albunes" >   
   <div data-role="header">
-    <h1>albunes</h1>
+    <h1>albumes</h1>
   </div>
 
   <div data-role="main" class="ui-content">
