--- a/index.html
+++ b/index.html
@@ -564,10 +564,17 @@ Davis también usa la técnica vocal scat, que consiste en improvisar sílabas s
 En 2000 el artista Hans Ruedi Giger crea una obra a pedido de Jonathan Davis, un micrófono que ha sido usado en diferentes giras de la banda Korn por el mundo. </p>
 
 
+<a href="#foto_siete" data-rel="popup" data-position="window" data-transition="fade">
+ <div align="center">
+<img src="INFORMACION/integrantes/jonathan davis.jpg"style="width:30%">
+</div> 
+   </a>
+   
+   <div data-role="popup" id="foto_siete" data-overlay-theme="b" data-theme="b" data-corners="false">
+ <a href="#" data-rel="back" class="ui ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right"> cerrar </a>
+ <img src="INFORMACION/integrantes/jonathan davis.jpg"style="width:300%">
+ </div>
 
-<div align="center">
-<img src="INFORMACION/integrantes/jonathan davis.jpg">
-</div>
 <br>
 <br>
 <br>
@@ -590,10 +597,20 @@ En 2000 el artista Hans Ruedi Giger crea una obra a pedido de Jonathan Davis, un
 
 <p>Fieldy usa un bajo Ibanez k5 de 5 cuerdas de diferentes colores usados a lo largo de su historia con KoRn. Fieldy a los 13/14 años ya era casi un alcohólico, robaba alcohol de tiendas o le sacaba a sus padres y la escondía en terrenos baldios para luego tomarlas antes de ir al escuela. Tiene tatuado todo el cuerpo desde el cuello hasta los talones, y comenzó a tatuarse en 1993 a comienzos de la banda. Todos los integrantes de KoRn tienen tatuados en parte de su cuerpo el nombre de la banda. </p>
 
-<div align="center">
+
+
+<a href="#foto_ocho" data-rel="popup" data-position="window" data-transition="fade">
+ <div align="center">
 <img src="INFORMACION/integrantes/Reginald Arvizu.jpg" style="width:60%">
 
 </div>
+  </a>
+   
+   <div data-role="popup" id="foto_ocho" data-overlay-theme="b" data-theme="b" data-corners="false">
+ <a href="#" data-rel="back" class="ui ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right"> cerrar </a>
+ <img src="INFORMACION/integrantes/Reginald Arvizu.jpg"  style="width:300%">
+ </div>
+
 
 <br>
 <br>
@@ -611,10 +628,19 @@ En 2000 el artista Hans Ruedi Giger crea una obra a pedido de Jonathan Davis, un
 
 <p>En 2006, David decide tomarse un descanso para dedicarse un poco más a su familia y a sus otros negocios (tiene varios restaurantes). Tras su marcha, Ko?n se hace con los servicios del veterano Terry Bozzio, un baterista que poco tiene que ver con el estilo musical de Ko?n ya que ha trabajado con artistas como Frank Zappa, Missing Persons y con otros muchos artistas de rock y jazz. Esta incorporación tampoco estuvo exenta de polémica, ya que los fans están preocupados ante la influencia de que un batería de rock experimental y jazz puede ejercer en una banda de metal como Ko?n. Ahora es reemplazado por Ray Luzier quien ahora es miembro oficial de la banda, luego de haber sido baterista solo en giras durante 2008. </p>
 
+ 
+  
+  <a href="#foto_nueve" data-rel="popup" data-position="window" data-transition="fade">
   <div align="center">
   <img src="INFORMACION/integrantes/david silvera.gif">
   
   </div>
+  </a>
+   
+   <div data-role="popup" id="foto_nueve" data-overlay-theme="b" data-theme="b" data-corners="false">
+ <a href="#" data-rel="back" class="ui ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right"> cerrar </a>
+    <img src="INFORMACION/integrantes/david silvera.gif" style="width:300%">
+ </div>
   
 <br>
 <br>
@@ -642,10 +668,19 @@ El momento más embarazoso de su carrera fue cuando vomitó en el escenario dura
 Su compañero en Ko?n, Brian "Head" Welch, fue quien le enseñó a tocar la guitarra a Munky para recuperar la movilidad de su dedo.
 Es uno de los pocos guitarristas que usan una guitarra de 7 cuerdas al igual que Brian Welch. </p>
 
-<div align="center">
+
+
+<a href="#foto_dies" data-rel="popup" data-position="window" data-transition="fade">
+  <div align="center">
 <img src="INFORMACION/integrantes/James Shaffer.jpg" style="width:60%">
 
 </div>
+  </a>
+   
+   <div data-role="popup" id="foto_dies" data-overlay-theme="b" data-theme="b" data-corners="false">
+ <a href="#" data-rel="back" class="ui ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right"> cerrar </a>
+   <img src="INFORMACION/integrantes/James Shaffer.jpg" style="width:300%">
+ </div>
 
 <br>
 <br>
@@ -680,10 +715,19 @@ Durante las giras de Head, hubo confusiones con respecto al nombre de la banda, 
 <p>Regreso a Korn
 En la edición Carolina Rebellion Festival del 2012, Head impresiono al público tocando "Blind", durante el concierto de Korn. Se anunció que Head tocaría con la banda en Rock on the Range en mayo de 2013, Rock Am Ring y Rock Im Park, en Junio de 2013. Oficialmente Head volvió a la banda el 2 de Mayo de 2013, y comenzó a grabar su primer album de estudio después de diez años fuera de la banda aunque apenas el 18 de Junio en su gira con Korn en Rusia fue hospitalizado por un caso fuerte de calculos en su riñón ,por lo que actualmente dejo por el momento la banda para ser atendido en el mismo país </p>
 
-<div align="center">
+
+
+<a href="#foto_once" data-rel="popup" data-position="window" data-transition="fade">
+ <div align="center">
 <img src="INFORMACION/integrantes/Brian Welch.jpg" style="width:50%">
 
 </div>
+  </a>
+   
+   <div data-role="popup" id="foto_once" data-overlay-theme="b" data-theme="b" data-corners="false">
+ <a href="#" data-rel="back" class="ui ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right"> cerrar </a>
+   <img src="INFORMACION/integrantes/Brian Welch.jpg" style="width:300%">
+ </div>
   
   
   
