--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <div  data-role="main" class="ui-content">
-  <p> ESTA APLICACION ESTA HECHA CON EL MOTIVO DE DAR A CONOCER ALGUNAS CARACTERISTICAS ESTA BANDA DE NU METAL</p>
+  <p> ESTA APLICACION ESTA HECHA CON EL MOTIVO DE DAR A CONOCER ALGUNAS CARACTERISTICAS DE ESTA BANDA DE NU METAL</p>
    <a href="#mypanel"  id="btnmenu" class="ui-btn" >menu</a> 
     
    <div align="center">
